# MBlottery

./: .env.example  .gitignore  claude.md  package.json
.github/workflows/: build-android.yml  build-desktop.yml
apps/admin/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/admin/src/: App.tsx  index.css  main.tsx
apps/admin/src/hooks/: useAdminData.ts
apps/admin/src/stores/: authStore.ts
apps/backend/: Dockerfile  Dockerfile.worker  package.json  tsconfig.json
apps/backend/prisma/: schema.prisma  seed.ts
apps/backend/src/: app.module.ts  main.ts
apps/backend/src/gateways/: events.gateway.ts
apps/backend/src/jobs/: auto-results.job.ts  draw-scheduler.job.ts  prize-processor.job.ts  ticket-expiry.job.ts
apps/backend/src/prisma/: prisma.service.ts
apps/frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/public/: manifest.json  sw.js
apps/frontend/src/: App.tsx  index.css  main.tsx
apps/frontend/src-tauri/: Cargo.toml  tauri.conf.json
apps/frontend/src-tauri/capabilities/: default.json  mobile.json
apps/frontend/src-tauri/icons/: README.md
apps/frontend/src-tauri/src/: lib.rs  main.rs
docs/: architecture.md  business-rules.md  database.md  deployment.md  dokploy-setup.md  integrations.md  lottery-rules.md  payout-rules.md  tauri-setup.md  tickets.md
infra/: docker-compose.prod.yml  docker-compose.yml
infra/nginx/: nginx.conf  nginx.prod.conf
infra/scripts/: backup.sh  deploy.sh  generate-secrets.sh
(+110 files in other folders)
